Removed the row coloring, fixed table selection, and removed the change dataset option

--- a/www/index.html
+++ b/www/index.html
@@ -21,7 +21,7 @@
     <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.10.16/css/jquery.dataTables.min.css"/> 
     <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/select/1.2.5/js/dataTables.select.min.js"/> 
     <link rel="stylesheet" type="text/css" href="shared/shiny.css"/> 
-    <link rel="stylesheet" type="text/css" href="shared/datatables/css/dataTables.extra.css"/>
+		<!--<link rel="stylesheet" type="text/css" href="shared/datatables/css/dataTables.extra.css"/>-->
     <link rel="stylesheet" type="text/css" href="css/datatables.min.css"/>
     <!--Bootstrap 3.3.7-->
     <link rel="stylesheet" href="css/bootstrap.css" media="screen">
@@ -54,7 +54,7 @@
             </li>
           </ul>
         </div>
-				<div class="navbar-collapse collapse dropdown">
+				<!--<div class="navbar-collapse collapse dropdown">
 					<button class="btn dropdown-toggle" type='button' data-toggle='dropdown'>Change Dataset<span class="caret"></span></button>
 					<ul class="dropdown-menu">
 						<li><a href="#">foo</a></li>
@@ -62,6 +62,7 @@
 						<li><a href="#">mojo</a></li>
 					</ul>
 				</div>
+				-->
       </div>
     </div>
 
