--- a/www/index.html
+++ b/www/index.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
 <html lang='en'>
   <head>
-    <!--Next 3 lines added for shiny-->
-    <script src="external_js/jquery-2.2.4.min.js"></script>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="external_js/shiny.min.js" type="text/javascript"></script>
     <script src="external_js/htmlwidgets.js" type="text/javascript"></script>
     <script src="external_js/bootstrap.min.js" type="text/javascript"></script>
@@ -49,7 +48,7 @@
         <div class="navbar-collapse collapse" id="navbar-main">
           <ul class="nav navbar-nav">
             <li class='nav-item dropdown'>
-              <a class='nav-link dropdown-toggle' role='button' data-toggle='dropdown' aria-haspopup='true' aria-expanded='false'>Developing Murine Cerebellum</a>
+              <a class='nav-link dropdown-toggle' role='button' data-toggle='dropdown' aria-haspopup='true' aria-expanded='false'></a>
 
             </li>
           </ul>
@@ -96,7 +95,7 @@
                 </ul>
                 <div id="group_tab_content" class="tab-content">
                   <div id="new_group" class="tab-pane fade active in">
-                    <form onchange="validate_new_group_form()" class="form-horizontal">
+										<!--<form onchange="validate_new_group_form()" class="form-horizontal">-->
                       <fieldset>
                         <legend>New Group</legend>
                         <div class="form-group">
@@ -132,7 +131,7 @@
                           </div>
                         </div>
                         </fieldset>
-                    </form>
+											<!--</form>-->
                   </div>
                   <div id="saved_groups" class="tab-pane fade">
                     <div id="analysis_table" style="width:100%; height:auto" class="datatables html-widget html-widget-output"></div>
